(library
    (name SnippetParser)
    (public_name Oni2.SnippetParser)
    (libraries
        str
        bigarray
        zed_oni
        reglfw
        lwt
        lwt.unix
        Rench
        Revery
        yojson
        ppx_deriving.runtime
        ppx_deriving_yojson.runtime
        reason-jsonrpc
        Oni2.core
        core
    )
    (preprocess (pps ppx_deriving_yojson ppx_deriving.show)))
    
(menhir (modules Parser) )

(ocamllex (modules Lexer) )
